# ksu

./: .gitignore
ableton-tips/: ableton-save-as-11.md
alina/: commercial_script.txt
desertir/: prompt-1.md
hardware/: ksu-iphone-cleanup-backup-plan.md  ksu-network-drive.md  shared-folder-structure.md
hardware/home-kit/: .gitignore  README.md  docker-compose.yml
hazar-slovar/: hazar-slovar.md
ksu-podcast-editor/: pyproject.toml  requirements.txt
ksu-podcast-editor/ksu_podcast_editor/: __init__.py  analyzer.py  cli.py  editor.py  models.py  transcriber.py
ksu-podcast-editor/podcast_autocut_reaper/: AutoCutByRegions.lua  ImportRegionsFromCSV.lua  README.md
ksu-podcast-editor/scripts/: ffmpeg_edit.py
ksu-podcast-editor/tests/: __init__.py
photo/: photo-stories.md
suno-mcp/: .gitignore  AGENT.md  pyproject.toml
suno-mcp/src/suno_mcp/: __init__.py  downloader.py  prompt_generator.py  server.py  suno_client.py
suno-mcp/tests/: test_prompt_generator.py
tickets/: AGENTS.md
