[project]
name = "ksu-podcast-editor"
version = "0.1.0"
description = "CLI tool for automated podcast editing - removes filler sounds and repetitions"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]

[dependency-groups]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[project.scripts]
ksu-podcast-editor = "ksu_podcast_editor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"